# fast-api-personal-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  health_check.py
app/api/endpoints/v1/: health_check.py
app/core/: _logging.py  config.py  global_exception.py  interface.py  limiter.py  security.py
app/db/: engine.py  mongo.py
app/services/: auth.py
