[project]
name = "fast-api-personal-template"
version = "0.1.0"
description = "FastAPI Personal Template"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "bcrypt==5.0.0",
    "beanie==2.1.0",
    "cffi==2.0.0",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==49.0.0",
    "deprecated==1.3.1",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "ecdsa==0.19.2",
    "fastapi==0.137.1",
    "greenlet==3.5.2",
    "h11==0.16.0",
    "idna==3.18",
    "lazy-model==0.4.0",
    "limits==5.8.0",
    "mako==1.3.12",
    "markupsafe==3.0.3",
    "mongomock==4.3.0",
    "mongomock-motor>=0.0.36",
    "packaging==26.2",
    "passlib==1.7.4",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pymongo==4.17.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.32",
    "pytz==2026.2",
    "rsa==4.9.1",
    "ruff==0.15.17",
    "sentinels==1.1.1",
    "six==1.17.0",
    "slowapi==0.1.10",
    "sqlalchemy==2.0.51",
    "sqlmodel==0.0.38",
    "starlette==1.3.1",
    "structlog==26.1.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.49.0",
    "wrapt==2.2.1",
]
